--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
+*{
+    margin: 0%;
+    padding: 0%;
+}
 body{
     background-color: darkgrey;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "Bebas Neue", sans-serif
 }
 h1{
+    text-align: center;;
+    font-size: 40px;
+    background-color: whitesmoke;
+}
+article{
     text-align: center;
+    margin: 0%;
+    padding: 0%;
+    font-size: 20px;
+}
+section{
+    text-align: center;
+    margin: 0%;
+    padding: 0%;
+    font-size: 20px;
+}
+img{
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+}
+footer{
+    text-align: center;
+    background-color: whitesmoke;
 }
